testsuite/tests/indexed-types/should_fail/T13092c/T13092c_1.hs
{-# LANGUAGE TypeFamilies #-}

module T13092c_1 where

type family F a
type instance F Int = ()
